--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,10 @@
 # API
 CHECKLIST_API_PORT=
+CHECKLIST_DB_GRPC_URL=
 
 # DB service
-CHECKLIST_DB_PORT=
-CHECKLIST_DB_SERVICE_URL=
-
-# Postgres
-CHECKLIST_DB_POSTGRES_DSN=host= user= password= dbname= sslmode= port=
+CHECKLIST_DB_GRPC_PORT=
+CHECKLIST_DB_POSTGRES_DSN=
 
 # Redis
 CHECKLIST_DB_REDIS_ADDR=
@@ -14,3 +12,6 @@ CHECKLIST_DB_REDIS_ADDR=
 # Kafka
 CHECKLIST_KAFKA_BROKER=
 CHECKLIST_KAFKA_TOPIC=
+
+API_PORT=
+DB_GRPC_URL=
