:sparkles: added caching with redis, set TTL to task create and task list

--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,7 @@ CHECKLIST_DB_GRPC_PORT=
 CHECKLIST_DB_POSTGRES_DSN=
 
 # Redis
-CHECKLIST_DB_REDIS_ADDR=
+CHECKLIST_REDIS_ADDR=
 
 # Kafka
 CHECKLIST_KAFKA_BROKER=
