:sparkles: added kafka, logging all the event into kafka.logs

--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,7 @@ CHECKLIST_REDIS_ADDR=
 # Kafka
 CHECKLIST_KAFKA_BROKER=
 CHECKLIST_KAFKA_TOPIC=
+CHECKLIST_KAFKA_LOG_FILE=
 
 API_PORT=
 DB_GRPC_URL=
